2006-09-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/delegates.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/libgladeloader.py:
	* kiwi/ui/views.py:
	Kill gladename in views, delegates and glade adaptors

2006-09-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (KiwiInstallLib.generate_template): Use a raw
	string here to allow the use of UNC paths on win32, pointed out
	by Aaron Spike.

2006-08-30  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py: Improve focus selection support for mask in entries.
	Fixes #2787

2006-08-30  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/currency.py:
	* kiwi/datatypes.py:
	* kiwi/enums.py:
	* kiwi/ui/objectlist.py:
	* kiwi/ui/widgets/entry.py: 
	Alignment support for datatypes. Fixes #2786

2006-08-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/enums.py:
	* kiwi/interfaces.py:
	* kiwi/ui/comboentry.py:
	* kiwi/ui/combomixin.py:
	* kiwi/ui/test/recorder.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/combobox.py:
	* tests/test_comboentry.py:

	Get rid of ComboMixin, use composition instead.
	Add an IEasyCombo interface reflecting the current state of the adhook 
	interface. Move the combo enums into kiwi.enums.

2006-08-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (KiwiInstallData.run_install): Take into account --root to the
	distutils install command if it's sent in.

=== 1.9.9 ===
2006-08-23  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update
	* kiwi/__version__.py: Bump

2006-08-23  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py(set_mask): Check if mask is None before converting it
	to unicode.
	* kiwi/datatypes.py:
	* kiwi/ui/widgets/entry.py:
	Datatype converters should provide a get_mask method. Fixes #2758

2006-08-22  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
