@@ -1,3 +1,8 @@
+2006-09-11  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/views.py (_open_glade): Sniff the content of the file and use libglade/gazpacho
+	when appropriate. Fall back to gazpacho since dtd has not always been present
+
 2006-09-08  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/delegates.py:
